color and movement

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
     <div id="container">
     </div>
 
+    <p class="clear">
+        <select id="cell-color">
+            <option value="white">white</option>
+            <option value="grey">grey</option>
+        </select>
+    </p>
+
     <script src= "grid.js"></script>
     <script src="main.js"></script>
 </body>
